--- a/app/src/main/res/layout/activity_declaration.xml
+++ b/app/src/main/res/layout/activity_declaration.xml
@@ -124,11 +124,19 @@
                 android:enabled="false"
                 android:text="@string/et_subject_en_text"/>
 
+            <EditText
+                android:id="@+id/et_supervisor_names"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/et_subject_en"
+                android:enabled="false"
+                android:text="@string/et_supervisor_names_text"/>
+
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/input_layout_language"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/et_subject_en">
+                android:layout_below="@id/et_supervisor_names">
 
                 <EditText
                     android:id="@+id/et_language"
@@ -138,19 +146,11 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <EditText
-                android:id="@+id/et_supervisor_names"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/input_layout_language"
-                android:enabled="false"
-                android:text="@string/et_supervisor_names_text"/>
-
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/input_layout_purpose_range"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/et_supervisor_names">
+                android:layout_below="@id/input_layout_language">
 
                 <EditText
                     android:id="@+id/et_purpose_range"
