--- a/app/src/main/res/menu/menu_subject_list.xml
+++ b/app/src/main/res/menu/menu_subject_list.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.example.hubson.systemdyplomant.view.subjects.SubjectListActivity">
     <item
         android:id="@+id/item_search"
         android:icon="@drawable/ic_search"
         android:title="@string/item_search_title"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom"
+        app:actionViewClass="android.support.v7.widget.SearchView"/>
     <item
         android:id="@+id/item_hide_taken"
         android:title="@string/item_hide_taken_title"
