--- a/app/src/main/res/layout/activity_subject_list.xml
+++ b/app/src/main/res/layout/activity_subject_list.xml
@@ -22,25 +22,19 @@
     </android.support.design.widget.AppBarLayout>
 
     <FrameLayout
-        android:id="@+id/frameLayout"
+        android:id="@+id/layout_subject_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+        <ProgressBar
+            android:id="@+id/pb_subject_list_loading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone"/>
+
         <include layout="@layout/subject_list" />
     </FrameLayout>
-
-    <!--<android.support.v4.widget.NestedScrollView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content">-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/text_test"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content" />-->
-
-    <!--</android.support.v4.widget.NestedScrollView>-->
-
-
 
 </android.support.design.widget.CoordinatorLayout>
