--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.example.hubson.systemdyplomant.view.main.MainActivity">
     <item
         android:id="@+id/item_account"
         android:icon="@drawable/ic_account_circle"
         android:title="@string/item_account_title"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom">
+        <menu>
+            <group>
+                <item
+                    android:id="@+id/item_logout"
+                    android:title="@string/item_logout_title"
+                    app:showAsAction="never"/>
+            </group>
+        </menu>
+    </item>
     <item
         android:id="@+id/item_about"
         android:title="@string/item_about_title"
